--- a/Essential/References.bib
+++ b/Essential/References.bib
@@ -9,7 +9,13 @@
     DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
 }
 
-%@inbook{REFERENSNAMN1,
+@manual{MATLAB2019,
+    Address = {Natick, Massachusetts},
+    Organization = {The Mathworks, Inc.},
+    Title = {MATLAB version 9.7 (R2019b)},
+    Year = {2019}}
+
+%@book{REFERENSNAMN1,
 %    author = "",
 %    title = "",
 %    publisher = "",
