--- a/Sections/Beteckningar.tex
+++ b/Sections/Beteckningar.tex
@@ -1,14 +1,12 @@
 \section*{Beteckningar}
 %
 \vspace{-5mm}
-\begin{table}[H]
-\begin{tabular}{@{} l l l @{}}
-\toprule
+\begin{longtable}[l]{@{} l l l @{}}
+\toprule\endfirsthead
 \textbf{Symbol} & \textbf{Benämning} & \textbf{Enhet} \\
 \midrule
     $E$ & Energi & \si{J} \\
     $m$ & Massa & \si{kg} \\
     $c$ & Ljusets hastighet & \si{m/s} \\
-\bottomrule
-\end{tabular}
-\end{table}
+\bottomrule \\
+\end{longtable}
