--- a/Sections/Metod.tex
+++ b/Sections/Metod.tex
@@ -3,13 +3,11 @@
 Det här är metod.
 \subsection{Metodbeskrivning}
 \subsection{Experimentell uppställning}
-Hänvisning till \cref{fig:namn}.
-%
+Hänvisning till \cref{f:namn}.
 \begin{figure} [H]
     \centering 
     \includegraphics[width=0.5\textheight]{experiment_uppstallning.png}
     \caption{Beskrivande text.}
-    \label{fig:namn}
+    \label{f:namn}
 \end{figure}
-%
 \subsection{Experimentell procedur}
