--- a/Sections/Teori.tex
+++ b/Sections/Teori.tex
@@ -1,15 +1,13 @@
 \section{Teori} \label{s:teori}
 %
-Det här är\footfullcite{einstein} teori \cite{einstein}. \n
+Det här är teori enligt \textcite{einstein}. \n
 
-Hänvisning till \cref{eq:namn}
-%
-\begin{equation} \label{eq:namn}
+Hänvisning till \cref{e:namn}
+\begin{equation} \label{e:namn}
     E=m \cdot c^2.
 \end{equation}
-%
-Hänvisning till \cref{tab:namn}.
-%
+
+Hänvisning till \cref{t:namn}.
 \begin{table}[H]
 \centering
 \caption{Tabellhuvud.}
@@ -20,7 +18,5 @@ Hänvisning till \cref{tab:namn}.
     $m$ & Massa &\si{M} \\
     $c$ & Ljusets hastighet & \si{L.T^{-1}} \\
 \bottomrule 
-\end{tabular} \label{tab:namn}
+\end{tabular} \label{t:namn}
 \end{table}
-%
-
