Updates from Overleaf

--- a/Essential/Style/Titlestyle_text.tex
+++ b/Essential/Style/Titlestyle_text.tex
@@ -1,4 +1,7 @@
-%-----------------------------------------------%              Titelsida layout%-----------------------------------------------
+%-----------------------------------------------
+%              Titelsida layout
+%-----------------------------------------------
+
 \newgeometry{top=4cm, hmargin=2cm, bottom=1.5cm}
 \begin{titlepage}
 \centering\Huge{Luleå Tekniska Universitet}
