--- a/Essential/Style/Titlestyle_Small.tex
+++ b/Essential/Style/Titlestyle_Small.tex
@@ -13,7 +13,7 @@
 	
 	% Bild, ändra "height" om bilden för stor/liten
 	\includegraphics[height=0.35\textwidth]{\thefrontpage}\\
-	\texttt{\thecourse}\\
+	\texttt{\thecoursename, \thecoursecode}\\
 	\vspace{8mm}
 	
 	% Namn
