--- a/Essential/Title.tex
+++ b/Essential/Title.tex
@@ -4,7 +4,8 @@
 % Style
 %  Max 7 pers totalt  -> Titlestyle_Big
 %  Max 10 pers totalt  -> Titlestyle_Small
-\def\thetitlestyle{Titlestyle_Big}
+%   -> Titlestyle_Text
+\def\thetitlestyle{Titlestyle_Fancy}
 %-----------------------------------------------
 
 % Titel
@@ -15,7 +16,10 @@
 \def\thefrontpage{framsida.png}
 
 % Kurs
-\def\thecourse{Kursnamn, F0000T}
+\def\thecoursename{Kursnamn}
+
+% Kurs
+\def\thecoursecode{F0000T}
 
 % Författare
 \def\theauthor{
