--- a/Essential/Style/Titlestyle_Big.tex
+++ b/Essential/Style/Titlestyle_Big.tex
@@ -37,7 +37,7 @@
 	\vfill
 	
 	% logga, datum
-    \includegraphics[width=0.2\textwidth]{ltu_swe.jpg} \\
+    \includegraphics[width=0.2\textwidth]{\thelogo} \\
     \vspace{0.2cm}
     \textrm{\theinstitution} \\ \vspace{0.05cm}
 	{\large \textrm{\today}\\}
