--- a/Essential/Style/Titlestyle_Text.tex
+++ b/Essential/Style/Titlestyle_Text.tex
@@ -5,7 +5,8 @@
 \newgeometry{top=4cm, hmargin=2cm, bottom=1.5cm}
 \begin{titlepage}
 \centering \Huge{Luleå Tekniska Universitet} \\ \vspace{4mm}
-\normalsize{\thecoursecode \\ \thecoursename}
+%\normalsize{\thecoursecode \\ \thecoursename}
+\normalsize{\thecoursename \\ \thecoursecode}
 \vspace{10mm} \\
 \rule{\linewidth}{0.3mm} \\ 
 \vspace{4mm}
@@ -14,6 +15,7 @@
 %\Large{\textrm{\thesubtitle}}
 \rule{\linewidth}{0.3mm} \\%[1.5cm]
 \vspace{15mm}
+
 % Namn
 \normalsize{\textbf{Författare:}} \\
 \vspace{-2.5mm}
@@ -28,8 +30,9 @@
 \end{tabular}
 \end{table}
 \vfill
+
 % logga, datum
-\includegraphics[width=0.2\textwidth]{ltu_swe.jpg} \\
+\includegraphics[width=0.2\textwidth]{\thelogo} \\
 \vspace{0.2cm}
 \textrm{\theinstitution} \\ \vspace{0.05cm}
 {\large \textrm{\today}\\}
