--- a/Essential/Title.tex
+++ b/Essential/Title.tex
@@ -3,9 +3,9 @@
 %-----------------------------------------------
 % Style
 %  Max 7 pers totalt  -> Titlestyle_Big
-%  Max 10 pers totalt  -> Titlestyle_Small
-%   -> Titlestyle_Text
-\def\thetitlestyle{Titlestyle_Fancy}
+%  Max 10 pers totalt -> Titlestyle_Small
+%  Ingen bild         -> Titlestyle_Text
+\def\thetitlestyle{Titlestyle_Big}
 %-----------------------------------------------
 
 % Titel
