--- a/Sections/Beteckningar.tex
+++ b/Sections/Beteckningar.tex
@@ -1,12 +1,12 @@
 \section*{Beteckningar}
 %
 \vspace{-5mm}
-\begin{longtable}[l]{@{} l l l @{}}
+\begin{longtable*}[l]{@{} l l l @{}}
 \toprule\endfirsthead
-\textbf{Symbol} & \textbf{Benämning} & \textbf{Enhet} \\
+\B{Symbol} & \B{Benämning} & \B{Enhet} \\
 \midrule
-    $E$ & Energi & \si{J} \\
-    $m$ & Massa & \si{kg} \\
-    $c$ & Ljusets hastighet & \si{m/s} \\
+    $E$ & Energi & \si{\J} \\
+    $m$ & Massa & \si{\kg} \\
+    $c$ & Ljusets hastighet & \si{\m\per\s} \\
 \bottomrule \\
-\end{longtable}
+\end{longtable*}
