--- a/Sections/Metod.tex
+++ b/Sections/Metod.tex
@@ -6,7 +6,7 @@ Det här är metod.
 Hänvisning till \cref{f:namn}.
 \begin{figure} [H]
     \centering 
-    \includegraphics[width=0.5\textheight]{experiment_uppstallning.png}
+    \includegraphics[width=0.75\textwidth]{experiment_uppstallning.png}
     \caption{Beskrivande text.}
     \label{f:namn}
 \end{figure}
