--- a/Sections/Teori.tex
+++ b/Sections/Teori.tex
@@ -12,7 +12,7 @@ Hänvisning till \cref{t:namn}.
 \centering
 \caption{Tabellhuvud.}
 \begin{tabular}{@{} l l l @{}} \toprule
-\textbf{Symbol} & \textbf{Storhet} & \textbf{Dimension} \\
+\B{Symbol} & \B{Storhet} & \B{Dimension} \\
 \midrule
     $E$ & Energi & \si{M.L^2.T^{2}} \\
     $m$ & Massa &\si{M} \\
